<resources>
    <string name="app_name">Super Chat</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="application_image">application_image</string>
    <string name="sign_in">Sign In</string>

    <string name="empty_field_error">The field cannot be empty!</string>
    <string name="not_valid_email_error">The e-mail address provided is incorrect!</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send">send</string>
    <string name="let_me_in">- Let me in! -</string>
    <string name="enter_group_title">Enter group title</string>
    <string name="select_group_language">Select group language</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_group">Add new group</string>
    <string name="filters">filters</string>
    <string name="adding_a_new_group">Adding a new group</string>
    <string name="user">user</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_registration">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="not_match_password_error">Passwords do not match.</string>
    <string name="enter_the_required_information">Enter the required information</string>
    <string name="nickname">Nickname</string>
    <string name="delete_group_question">Are you sure you want to delete the group?</string>
    <string name="delete_group">Delete group</string>
    <string name="apply">Apply</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="added_to_observed">Added to observed</string>
    <string name="removed_from_observed">Removed from observed</string>
    <string name="select_languages">Select languages</string>
    <string name="ok">Ok</string>
    <string name="observables_first">Observables first</string>
    <string name="loading">Loading...</string>
    <string name="edit">edit</string>
    <string name="edit_group">Edit group</string>
    <string name="reset_password_description">We will send you an email with further instructions on how to reset your
        password.
    </string>
    <string name="send_reset_password_email_toast">We have sent a letter to the specified E-mail address</string>
    <string name="or">- OR -</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="change_background">Change background</string>
    <string name="success">Success</string>

    <string-array name="languages">
        <item>English</item>
        <item>Polski</item>
        <item>Русский</item>
    </string-array>
</resources>