<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/medium_padding">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textStyle="bold"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/reset_password_description"
              android:padding="@dimen/medium_padding"
              android:textSize="@dimen/medium_text"/>

    <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/medium_margin"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/send_reset_email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenButtonColor"
                android:layout_marginEnd="@dimen/medium_margin"
                android:text="@string/send"/>

        <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/redColor"
                android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>