<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".Activities.LoginActivity">

    <ImageView
            android:id="@+id/application_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/application_image"
            android:src="@drawable/ic_chat_256"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:autofillHints="Login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/button_with_ripple_effect"
            android:text="@string/sign_in"
            android:textAllCaps="false"/>

    <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_margin="@dimen/little_margin"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/sign_in_with_google_card_view"
            android:layout_gravity="center"
            android:backgroundTint="@color/greenSecondColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_google"
                    tools:ignore="ContentDescription"
                    android:layout_margin="@dimen/little_margin"/>

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_google"
                    android:layout_margin="@dimen/little_margin"
                    android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/little_margin"/>

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:text="@string/not_registered_yet"/>

        <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2sp"
                android:textColor="@color/blueButtonColor"
                android:text="@string/sign_up"/>


    </LinearLayout>


</LinearLayout>