<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/medium_padding">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/edit_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blueButtonColor"
            android:text="@string/edit"/>

    <Button
            android:id="@+id/delete_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/redColor"
            android:text="@string/delete"/>

</LinearLayout>