<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".Activities.RegistrationActivity">

    <ImageView
            android:id="@+id/application_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/application_image"
            android:src="@drawable/ic_chat_256"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:autofillHints="Login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/nickname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/nickname"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:hint="@string/nickname"
                android:inputType="textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:autofillHints="@string/repeat_password"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/sign_up_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/button_with_ripple_effect"
            android:text="@string/sign_up_registration"
            android:textAllCaps="false"/>



</LinearLayout>