<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_padding">

    <TextView
            android:id="@+id/filters_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textAllCaps="true"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/languages_text_view"
            android:paddingHorizontal="@dimen/medium_padding"
            android:paddingBottom="@dimen/medium_padding"/>

    <TextView
            android:id="@+id/languages_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_dialog_title"
            android:padding="@dimen/medium_padding"
            android:hint="@string/select_languages"
            android:background="@android:drawable/editbox_background"
            android:gravity="center"
            app:drawableEndCompat="@drawable/ic_down_arrow"/>

    <LinearLayout
            android:id="@+id/observed_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/little_margin"
            app:layout_constraintTop_toBottomOf="@id/languages_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/observed_first_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/observables_first"
                android:textSize="@dimen/medium_text"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/observed_first_switch_compat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/observed_linear_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium_margin">

        <Button
                android:id="@+id/apply_filters_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginEnd="@dimen/medium_margin"
                android:backgroundTint="@color/greenButtonColor"
        />

        <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="@color/redColor"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>