<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/user_profile_toolbar_menu"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/nickname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/nickname"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:hint="@string/nickname"
                android:inputType="textAutoComplete"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/apply_changes_button"
            android:background="@drawable/button_with_ripple_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:enabled="false"/>
    <Button
            android:id="@+id/change_background_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_with_ripple_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_background"
            android:layout_gravity="center"
            android:padding="@dimen/medium_padding"
            android:layout_marginTop="@dimen/little_margin"
            />

</LinearLayout>